--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,6 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-    buildFeatures {
-        viewBinding = true
-    }
 
     defaultConfig {
         applicationId "com.example.instatexnopos"
@@ -36,6 +33,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
 }
 
 dependencies {
@@ -73,6 +75,9 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //image
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //LiveData and ViewModel
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
