--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore:23.0.2'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
     //Jetback Nav
     def nav_version = "2.3.5"
